Home page on mobile the arrow under the text (bug 1971)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Mobile.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Mobile.less
@@ -162,21 +162,21 @@ body
     bottom: 20px;
     left: 0;
     right: 0;
-    width: 75px;
+    width: 85px;
     padding-left: 16px; /*In order to look centered*/
     overflow:hidden;
     &:after
     {
         .pseudo;
-        width: 0px;
-        height: 0px;
+        width: 0;
+        height: 0;
         border-style: solid;
         border-width: 4px 4px 0 4px;
         border-color: #fff transparent transparent transparent;
         pointer-events: none;
         position: absolute;
         top: 8px;
-        right: 6px;
+        right:0;
     }
 }
 .langSelect
@@ -185,7 +185,7 @@ body
     color: #fff;
     border:none;
     outline:none;
-    width: 95px;
+    width: 105px;
 }
 option
 {
